--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -11,7 +11,11 @@ html {
 
 /* Variables */
 :root {
-  --std-margin: 3rem;
+  --margin: 3rem;
+  --color-one: hsl(291, 47%, 60%);
+  --color-two: hsl(340, 82%, 59%);
+  --color-three: hsl(207, 90%, 77%);
+  --color-four: hsl(187, 71%, 82%);
   --primary-color: black;
   --secondary-color: white;
   --font-size: 1.5rem;
@@ -53,26 +57,13 @@ img {
   }
 }
 
-/* Gradient Text */
-@media (prefers-reduced-motion: no-preference) {
-  .moving-text {
-    animation: move-bg 20s linear infinite;
-  }
-
-  @keyframes move-bg {
-    to {
-      background-position: var(--bg-size) 0;
-    }
-  }
-}
-
 /* Cursor Effect */
 .circle {
   height: 24px;
   width: 24px;
   border-radius: 24px;
-  background-color: purple;
-  box-shadow: 1px 1px 1px 1px blue;
+  background-color: hsl(291, 47%, 60%);
+  box-shadow: 1px 1px 4px 1px blue;
   position: absolute;
   top: 0;
   left: 0;
