--- a/assets/css/templates/home.css
+++ b/assets/css/templates/home.css
@@ -25,8 +25,22 @@ a {
 
 /* Project Card */
 .card {
-  aspect-ratio: 16 / 9;
   background: none;
+}
+
+.card-body {
+  font-size: var(--font-size);
+  color: gray;
+  bottom: 0rem;
+  padding: 2rem;
+  position: absolute;
+  opacity: 0;
+  transition: all 0.4s ease-in-out;
+}
+
+.card:hover .card-body {
+  color: white;
+  opacity: 1;
 }
 
 .card-title {
@@ -49,7 +63,9 @@ a {
 }
 
 .card:hover .card-img-container {
-  box-shadow: 0px 0px 3px 2px rgba(199, 94,180, 1);
+  background-color: black;
+  filter: blur(0.75px);
+  box-shadow: 0px 0px 3px 2px hsl(291, 47%, 60%);
 }
 
 .card-img {
@@ -62,20 +78,6 @@ a {
 
 .card:hover .card-img {
   opacity: 0.9;
-}
-
-.card-body {
-  font-size: 1.5rem;
-  color: gray;
-  transition: all 0.4s ease-in-out;
-}
-
-.card:hover .card-body {
-  color: white;
-}
-
-.card:hover .card-img-container {
-  background-color: white;
 }
 
 /* Project Grid Breakpoints */
