--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -16,6 +16,7 @@ html {
   --color-two: hsl(340, 82%, 59%);
   --color-three: hsl(207, 90%, 77%);
   --color-four: hsl(187, 71%, 82%);
+  --box-shadow: 0px 0px 3px 2px var(--color-one);
   --primary-color: black;
   --secondary-color: white;
   --font-size: 1.5rem;
@@ -62,8 +63,7 @@ img {
   height: 24px;
   width: 24px;
   border-radius: 24px;
-  background-color: hsl(291, 47%, 60%);
-  box-shadow: 1px 1px 4px 1px blue;
+  background-color: var(--color-one);
   position: absolute;
   top: 0;
   left: 0;
