--- a/assets/css/templates/project.css
+++ b/assets/css/templates/project.css
@@ -1,9 +1,19 @@
 /* project image */
 .project-img {
-	width: 100%;
+	min-width: 100%;
 	border-radius: 20px;
 	opacity: 100%;
 	transition: all 0.4s ease-in-out;
+	animation: blur 0.75s ease-in;
+}
+
+@keyframes blur {
+	from {
+		filter: blur(3px);
+	}
+	to {
+		filter: blur(0px);
+	}
 }
 
 .project-img:hover {
@@ -13,16 +23,23 @@
 
 /* project title heading */
 .heading {
-	font-size: 5rem;
+	font-size: 3rem;
+	animation: fadeIn 1.2s ease-in-out;
+}
+
+.summary {
+	animation: fadeIn 1.2s ease-in-out;
 }
 
 /* tags */
 .sub-heading {
 	font-size: 1rem;
+	animation: fadeIn 1.5s ease-in-out;
 }
 
 .tags {
 	list-style-type: none;
 	margin: 0;
 	padding: 0;
+	animation: fadeIn 1.8s ease-in-out;
 }
