cursor removal, intersectional observer
Removed cursor effect, tried to add Lightbox

--- a/assets/css/templates/header.css
+++ b/assets/css/templates/header.css
@@ -37,7 +37,7 @@ header {
 
 .sticky {
     top: 1rem;
-    position: sticky;
+    position: relative;
     /* font-size: 1.5rem; */
     z-index: 5;
 }
