--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Hanken+Grotesk:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+
 /* Root Value Stylings */
 *,
 *::before,
@@ -58,26 +61,4 @@ img {
   to {
     opacity: 1;
   }
-}
-
-/* Cursor Effect */
-.circle {
-  height: 24px;
-  width: 24px;
-  border-radius: 24px;
-  background-color: var(--color-one);
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-.cursor {
-  pointer-events: none;
-  position: fixed;
-  display: block;
-  border-radius: 0;
-  mix-blend-mode: difference;
-  top: 0;
-  left: 0;
-  z-index: 9999999999999999;
 }
