--- a/assets/css/templates/project.css
+++ b/assets/css/templates/project.css
@@ -65,6 +65,23 @@
 	animation: fadeIn 1s ease-in-out;
 }
 
+.a {
+  color: gray;
+  text-decoration: none;
+  font-size: 0.9rem;
+  transition: 0.25s ease-in-out;
+}
+
+
+.a:hover {
+  color: var(--color-one);
+}
+
+.a:hover img{
+  opacity: 95%;
+  box-shadow: var(--box-shadow);
+}
+
 .gallery-img:hover {
 	opacity: 95%;
 	box-shadow: var(--box-shadow);
