--- a/assets/css/templates/home.css
+++ b/assets/css/templates/home.css
@@ -46,6 +46,7 @@ a {
 
 .card-title {
   /* text-indent: 4rem; */
+  font-family: Helvetica, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 2rem;
   font-weight: normal;
   color: rgba(255, 255, 255, 0.8);
