--- a/assets/css/templates/project.css
+++ b/assets/css/templates/project.css
@@ -23,6 +23,7 @@
 
 /* project title heading */
 .heading {
+  font-family: Helvetica, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 5rem;
   animation: fadeIn 1.2s ease-in-out;
 }
@@ -43,11 +44,23 @@
 }
 
 .tags {
-  color: gray;
+  color: white;
   list-style-type: none;
   margin: 0;
   padding: 0;
   animation: fadeIn 1.8s ease-in-out;
+}
+
+.tags i {
+  font-style: normal;
+  font-weight: bold;
+  text-transform: uppercase;
+  color: grey;
+  font-size: 0.75rem;
+}
+
+.tags li {
+  margin-bottom: 5px;
 }
 
 .gallery {
