--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -54,6 +54,12 @@ img {
   max-width: 100%;
 }
 
+a {
+  color: var(--color-one);
+  text-decoration: none;
+  transition: all 0.5s ease-in-out;
+}
+
 /* Animations */
 @keyframes fadeIn {
   from {
@@ -66,6 +72,10 @@ img {
 
 /* Hover Effects */
 @media(hover: hover) and (pointer: fine) {
+
+  a:hover {
+    color: var(--secondary-color);
+  }
 
   .a:hover {
     color: var(--color-one);
